@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-15T08:30:18Z",
-  "count_outdated" : 182,
-  "uniques_outdated" : 54,
-  "count" : 198,
+  "timestamp" : "2022-10-15T16:31:50Z",
+  "count_outdated" : 184,
+  "uniques_outdated" : 55,
+  "count" : 199,
   "uniques" : 65,
   "clones" : [
-    {
-      "timestamp": "2022-10-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-02T00:00:00Z",
       "count": 1,
