@@ -1,3 +1,11 @@
+2022-10-15T16:31:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3256380166 # 138
+* notice: last 14d: unq all: 2 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 54 182 / 65 198
+* notice: next accum: outdated-unq outdated-all / unq all: 55 184 / 65 199
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-01] / []
+
 2022-10-15T08:30:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3255020076 # 137
 * notice: last 14d: unq all: 2 16
